--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Multe">
         <activity
+            android:name=".InfoMultaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VisualizzaMultaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NuovaMultaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
